--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <h3>В Наявності:</h3>
             <ul>
               <span>–– Шахмати Дерев яні ––</span>
-              <li>- шахмотна доска розміром 30х30мм</li>
+              <li>- шахмотна доска розміром 30х30см</li>
               <li>- деревʼяні фігури</li>
               <li>– дерев яні шашки</li>
             </ul>
