--- a/ru.html
+++ b/ru.html
@@ -249,7 +249,7 @@
           <div class="photo__content">
             <h3>В Наличии</h3>
             <ul>
-              <span>––Деревянные Шахматы (34х34)––</span>
+              <span>––Деревянные Шахматы––</span>
               <li>- размер шахматной доски 34x34см</li>
               <li>– шахи, шашки, нарди</li>
               <li>- деревянные шахматные фигуры</li>
