--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         </nav>
         <div class="lang">
           <span class="lang__item">30х30см</span> |
-          <a href="ru.html" class="lang__item">34x34см</a>
+          <a href="34x34sm.html" class="lang__item">34x34см</a>
           |
-          <a href="shahi.html" class="lang__item">52х52см</a>
+          <a href="52x52sm.html" class="lang__item">52х52см</a>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -91,13 +91,13 @@
         <img
           src="image/shahmaty_ua.webp"
           class="promo__img"
-          width="450"
-          height="254"
+          width="456"
+          height="290"
           itemprop="image"
           alt="шахмати гра"
         />
         <div class="promo_description" itemprop="description">
-          Замовляй, грай та матуй всіх королів!
+          замовляй, грай та матуй всіх королів!
         </div>
         <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
           <meta itemprop="priceCurrency" content="UAH" />
@@ -116,7 +116,7 @@
             loading="lazy"
             alt="показати"
           />
-          <p>Шахмати це – це твій крок до перемоги!</p>
+          <p>шахмати це – це твій крок до перемоги!</p>
         </div>
         <div class="promo__air air__right">
           <img
@@ -154,7 +154,7 @@
             height="330"
             loading="lazy"
             itemprop="image"
-            alt="Шахматы игра"
+            alt="Шахмати игра"
           />
           <div class="about__air">
             <img
@@ -163,7 +163,7 @@
               width="78"
               height="100"
               loading="lazy"
-              alt="Шахматная нотация"
+              alt="Шахова нотація"
             />
             <img
               src="image/king-figure.webp"
@@ -171,7 +171,7 @@
               width="45"
               height="120"
               loading="lazy"
-              alt="Шахматная фигура"
+              alt="Шахова фигура"
             />
             <img
               src="image/ruler-tool.webp"
@@ -251,17 +251,17 @@
           <div class="photo__content">
             <h3>В Наявності:</h3>
             <ul>
-              <span>–– Шахмати Дерев яні ––</span>
-              <li>- шахмотна доска розміром 30х30см</li>
-              <li>- деревʼяні фігури</li>
-              <li>– дерев яні шашки</li>
+              <span>–– Шахмати Дерев яні 2в1 ––</span>
+              <li>- шахова дошка розміром 30х30см</li>
+              <li>- дерев яні фігури</li>
+              <li>– пластикові шашки</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
         </div>
       </section>
       <section id="question" itemscope itemtype="http://schema.org/FAQPage">
-        <h2 class="question__title">шахмати правила</h2>
+        <h2 class="question__title">правила гри</h2>
         <dl class="question__list">
           <div
             class="question__item"
@@ -329,7 +329,7 @@
             >
               <span itemprop="text">
                 Це настільна стратегічна гра для двох гравців, кожен має 16
-                шашок. Гравці рухають свої шашки по дошці з метою взяти в плен
+                шашок. Гравці рухають свої шашки по дошці з метою взяти в полон
                 короля. Гра завершується, коли один із гравців матує
                 супротивника.
               </span>
@@ -382,7 +382,7 @@
             >
               <span itemprop="text">
                 Рухається на одну клітину; Слон - по діагоналі; Королева -
-                комбінація слона та тура; Конь - "Л"; Пішак - 1 або 2 клітини
+                комбінація слона та тура; Кінь - "Л"; Пішак - 1 або 2 клітини
                 вперед; Стратегія та передбачення ключові для гри.
               </span>
             </dd>
@@ -614,7 +614,7 @@
               <input
                 type="hidden"
                 name="title"
-                value="Шахмати 30х30 (2в1 Ук-версія)"
+                value="Шахи 30х30 (укр-версія-1)"
               />
               <input type="hidden" name="price" id="price" value="800" />
               <input type="hidden" name="payment" id="payment" value="cash" />
