--- a/34x34sm.html
+++ b/34x34sm.html
@@ -6,7 +6,7 @@
     <title>Шахматы «Деревянные» – Купить з Доставкой (+800 Заказов)</title>
     <meta
       name="description"
-      content="Приобретайте Шахматы Деревянные - (34x34) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Ознакомьтесь с фото и заказывайте шахматы в подарок (800+ заказов)!"
+      content="Приобретайте Шахматы Деревянные - (34x34, и другие) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Ознакомьтесь с фото и заказывайте шахматы в подарок (800+ заказов)!"
     />
     <meta
       name="keywords"
@@ -72,11 +72,11 @@
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
-          <a href="index.html" class="lang__item">30х30см</a>
+          <a href="/" class="lang__item">30х30см</a>
           |
           <span class="lang__item">34x34см</span>
           |
-          <a href="52x52sm.html" class="lang__item">52х52см</a>
+          <a href="/52x52sm" class="lang__item">52х52см</a>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
