--- a/52x52sm.html
+++ b/52x52sm.html
@@ -10,7 +10,7 @@
 
     <meta
       name="description"
-      content="Купуйте Шахи – Дерев яні (гра для всіх) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте. Понад 800 задоволених клієнтів!"
+      content="Купуйте Шахи – Дерев яні (52x52, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте. Понад 800 задоволених клієнтів!"
     />
     <meta
       name="keywords"
@@ -76,9 +76,9 @@
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
-          <a href="index.html" class="lang__item">30х30см</a>
+          <a href="/" class="lang__item">30х30см</a>
           |
-          <a href="34x34sm.html" class="lang__item">34x34см</a>
+          <a href="/34x34sm" class="lang__item">34x34см</a>
           |
           <span class="lang__item">52х52см</span>
         </div>
