--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </title>
     <meta
       name="description"
-      content="Придбайте Шахмати - Дерев яні (2 гравця) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і замовляйте шахмати (800+ замовлень)!"
+      content="Придбайте Шахмати - Дерев яні (30х30, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і замовляйте шахмати (800+ замовлень)!"
     />
     <meta
       name="keywords"
@@ -76,9 +76,9 @@
         </nav>
         <div class="lang">
           <span class="lang__item">30х30см</span> |
-          <a href="34x34sm.html" class="lang__item">34x34см</a>
+          <a href="/34x34sm" class="lang__item">34x34см</a>
           |
-          <a href="52x52sm.html" class="lang__item">52х52см</a>
+          <a href="/52x52sm" class="lang__item">52х52см</a>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
