edits to meta-tags

--- a/34x34sm.html
+++ b/34x34sm.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Шахматы «Деревянные» – Купить з Доставкой (+800 Заказов)</title>
+    <title>Шахматы Деревянные – Купить з Доставкой (+800 Заказов)</title>
     <meta
       name="description"
-      content="Приобретайте Шахматы Деревянные - (34x34, и другие) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Ознакомьтесь с фото и заказывайте шахматы в подарок (800+ заказов)!"
+      content="Шахматы деревянные - (34x34, и другие) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Посмотрите фотографии и покупайте шахматы на подарок (800+ заказов)!"
     />
     <meta
       name="keywords"
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Шахматы Купить" />
     <meta
       property="og:description"
-      content="Приобретайте Шахматы Деревянные - (34x34) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Ознакомьтесь с фото и заказывайте шахматы в подарок (800+ заказов)!"
+      content="Шахматы деревянные - (34x34, и другие) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Посмотрите фотографии и покупайте шахматы на подарок (800+ заказов)!"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахматы ТУТ" />
@@ -33,9 +33,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "Шахматы Деревянные",
+        "name": "Шахматы Купить",
         "image": "/image/shahmaty_ru.webp",
-        "description": "Шахматы - покупайте и наслаждайтесь игрой, подходят для всех, от новичков до тех, кто стремится стать лучшим стратегом.",
+        "description": "идеальная игра для тех кто хочет стратегически мыслить",
         "brand": {
           "@type": "Thing",
           "name": "Shahmati"
