--- a/52x52sm.html
+++ b/52x52sm.html
@@ -3,14 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-      Шахи Купити Дерев'яні (гра для всіх) – Шахи ТУТ! 🚚 Швидка доставка (1-2
-      дні). Замовте зараз! (800+ замовлень)
-    </title>
+    <title>Шахи Дерев яні – Купити з Доставкою (800+ замовлень)</title>
 
     <meta
       name="description"
-      content="Купуйте Шахи – Дерев яні (52x52, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте. Понад 800 задоволених клієнтів!"
+      content="Купуйте Шахи Дерев яні – (52x52, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і купуйте шахмати на подарунок (800+ замовлень)"
     />
     <meta
       name="keywords"
@@ -19,7 +16,7 @@
     <meta property="og:title" content="Шахи Купити" />
     <meta
       property="og:description"
-      content="Придбайте шахи - (гра для всіх) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте шахи. (800+ замовлень)!"
+      content="Купуйте Шахи Дерев яні – (52x52, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і купуйте шахмати на подарунок (800+ замовлень)"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахи ТУТ" />
@@ -37,9 +34,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "Шахи Дерев яні",
+        "name": "Шахи Купити",
         "image": "/image/shahy_ua.webp",
-        "description": "Гра для тих, хто тільки починає вивчати шахи або шахи для всіх, хто бажає насолоджуватися відчуттям розуму та стратегічного мислення.",
+        "description": "ідеальна гра для тих хто хоче стратегічно мислити",
         "brand": {
           "@type": "Thing",
           "name": "Shahmati"
