--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-      Шахмати Купити Дерев яні (грати на двох) з доставкою – Shahmati ТУТ! 🚚
-      Найкраща якість та стиль у кожній фігурці. Замовте зараз! (800+ замовлень)
-    </title>
+    <title>Шахмати Дерев яні – Купити з Доставкою (800+ замовлень)</title>
     <meta
       name="description"
-      content="Придбайте Шахмати - Дерев яні (30х30, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і замовляйте шахмати (800+ замовлень)!"
+      content="Купуйте Шахмати Дерев яні – (30х30, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фотографії та купуйте шахмати на подарунок (800+ замовлень)!"
     />
     <meta
       name="keywords"
@@ -18,7 +15,7 @@
     <meta property="og:title" content="Шахмати Купити" />
     <meta
       property="og:description"
-      content="Придбайте Шахмати - дерев яні (грати на двох) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і замовляйте шахмати (800+ замовлень)!"
+      content="Купуйте Шахмати Дерев яні – (30х30, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фотографії та купуйте шахмати на подарунок (800+ замовлень)!"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахмати ТУТ" />
@@ -38,7 +35,7 @@
         "@type": "Product",
         "name": "Шахмати купити",
         "image": "/image/shahmaty_ua.webp",
-        "description": "Шахмати Дерев'яні - ідеальна гра для початківців та всіх, хто хоче купити шахмати та відчути себе розумним та справжнім стратегом. Замовте зараз за вигідною ціною!",
+        "description": "ідеальна гра для тих хто хоче стратегічно мислити",
         "brand": {
           "@type": "Thing",
           "name": "Shahmati"
