image replacement, link replacement

--- a/34x34sm.html
+++ b/34x34sm.html
@@ -661,7 +661,7 @@
       gtag('js', new Date());
       gtag('config', 'G-01MLQ4ZTBC');
     </script>
-    <!-- Hotjar Tracking Code for https://shahmatytut.com/ru -->
+    <!-- Hotjar Tracking Code for shahmatytut/34x34sm -->
     <script>
       (function (h, o, t, j, a, r) {
         h.hj =
@@ -669,7 +669,7 @@
           function () {
             (h.hj.q = h.hj.q || []).push(arguments);
           };
-        h._hjSettings = { hjid: 3811296, hjsv: 6 };
+        h._hjSettings = { hjid: 3822025, hjsv: 6 };
         a = o.getElementsByTagName('head')[0];
         r = o.createElement('script');
         r.async = 1;
