--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <img
           src="image/shahmaty_ua.webp"
           class="promo__img"
-          width="456"
+          width="459"
           height="290"
           itemprop="image"
           alt="шахмати гра"
@@ -113,7 +113,7 @@
             loading="lazy"
             alt="показати"
           />
-          <p>шахмати це – це твій крок до перемоги!</p>
+          <p>шахмати – це твій крок до перемоги!</p>
         </div>
         <div class="promo__air air__right">
           <img
@@ -248,10 +248,10 @@
           <div class="photo__content">
             <h3>В Наявності:</h3>
             <ul>
-              <span>–– Шахмати Дерев яні 2в1 ––</span>
+              <span>–– Шахмати Дерев яні ––</span>
               <li>- шахова дошка розміром 30х30см</li>
-              <li>- дерев яні фігури</li>
-              <li>– пластикові шашки</li>
+              <li>- дерев яні фігури для шахмат</li>
+              <li>– пластикові фігури для шашок</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
@@ -371,7 +371,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">як ходе король</dt>
+            <dt itemprop="name">як ходять фігури</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
@@ -503,7 +503,7 @@
         <h2 class="outreach__title">ТАКОЖ КУПУЮТЬ</h2>
         <div class="outreach__list">
           <a
-            href="https://monopolytut.com/harry-potter"
+            href="https://monopolytut.com/"
             rel="dofollow"
             class="outreach__item"
           >
@@ -656,7 +656,7 @@
       gtag('js', new Date());
       gtag('config', 'G-01MLQ4ZTBC');
     </script>
-    <!-- Hotjar Tracking Code for https://shahmatytut.com/ -->
+    <!-- Hotjar Tracking Code for shahmatytut -->
     <script>
       (function (h, o, t, j, a, r) {
         h.hj =
@@ -664,7 +664,7 @@
           function () {
             (h.hj.q = h.hj.q || []).push(arguments);
           };
-        h._hjSettings = { hjid: 3811296, hjsv: 6 };
+        h._hjSettings = { hjid: 3822025, hjsv: 6 };
         a = o.getElementsByTagName('head')[0];
         r = o.createElement('script');
         r.async = 1;
