--- a/52x52sm.html
+++ b/52x52sm.html
@@ -247,13 +247,13 @@
           <div class="photo__content">
             <h3>В Наявності</h3>
             <ul>
-              <span>–– Шахи Дерев яні 3в1 ––</span>
+              <span>–– Шахи Дерев яні ––</span>
               <li>– розмір у відкритому вигляді: 52х52см</li>
               <li>– нарди шашки шахи</li>
               <li>– дерев яні шахові фігури</li>
-              <li>– дерев яні фішки</li>
-              <li>– пластикові шашки</li>
-              <li>– 2 кубики</li>
+              <li>– дерев яні фішки для нард</li>
+              <li>– пластикові фігури для шашок</li>
+              <li>– 2 кубики для нард</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
@@ -509,7 +509,7 @@
         <h2 class="outreach__title">ТАКОЖ КУПУЮТЬ</h2>
         <div class="outreach__list">
           <a
-            href="https://monopolytut.com/harry-potter"
+            href="https://monopolytut.com/"
             rel="dofollow"
             class="outreach__item"
           >
@@ -662,7 +662,7 @@
       gtag('js', new Date());
       gtag('config', 'G-01MLQ4ZTBC');
     </script>
-    <!-- Hotjar Tracking Code for https://shahmatytut.com/shahi -->
+    <!-- Hotjar Tracking Code for shahmatytut/52x52sm -->
     <script>
       (function (h, o, t, j, a, r) {
         h.hj =
@@ -670,7 +670,7 @@
           function () {
             (h.hj.q = h.hj.q || []).push(arguments);
           };
-        h._hjSettings = { hjid: 3811296, hjsv: 6 };
+        h._hjSettings = { hjid: 3822025, hjsv: 6 };
         a = o.getElementsByTagName('head')[0];
         r = o.createElement('script');
         r.async = 1;
