--- a/34x34sm.html
+++ b/34x34sm.html
@@ -249,7 +249,7 @@
           <div class="photo__content">
             <h3>В Наличии</h3>
             <ul>
-              <span>–– Деревянные Шахматы 3в1 ––</span>
+              <span>–– Деревянные Шахматы ––</span>
               <li>- размер шахматной доски 34x34см</li>
               <li>– шахи, шашки, нарды</li>
               <li>- деревянные шахматные фигуры</li>
