added version caption to product images

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_1_uk.webp"
+                src="image/image-v2_mini_1_uk.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -212,7 +212,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_2_uk.webp"
+                src="image/image-v2_mini_2_uk.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -227,7 +227,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_3_uk.webp"
+                src="image/image-v2_mini_3_uk.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -238,7 +238,7 @@
           </ol>
           <div class="photo__frame">
             <img
-              src="image/image_big_uk.webp"
+              src="image/image-v2_big_uk.webp"
               width="550"
               height="418"
               loading="lazy"
@@ -318,7 +318,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">як ходять</dt>
+            <dt itemprop="name">шахмати це</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
