--- a/34x34sm.html
+++ b/34x34sm.html
@@ -198,7 +198,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_1_ru.webp"
+                src="image/image-v2_mini_1_ru.webp"
                 width="170"
                 height="126"
                 loading="lazy"
@@ -213,7 +213,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_2_ru.webp"
+                src="image/image-v2_mini_2_ru.webp"
                 width="170"
                 height="126"
                 loading="lazy"
@@ -228,7 +228,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_3_ru.webp"
+                src="image/image-v2_mini_3_ru.webp"
                 width="170"
                 height="126"
                 loading="lazy"
@@ -239,7 +239,7 @@
           </ol>
           <div class="photo__frame">
             <img
-              src="image/image_big_ru.webp"
+              src="image/image-v2_big_ru.webp"
               width="550"
               height="413"
               loading="lazy"
