--- a/52x52sm.html
+++ b/52x52sm.html
@@ -196,7 +196,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_1_uk2.webp"
+                src="image/image-v2_mini_1_uk2.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -211,7 +211,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_2_uk2.webp"
+                src="image/image-v2_mini_2_uk2.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -226,7 +226,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/mini_3_uk2.webp"
+                src="image/image-v2_mini_3_uk2.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -237,7 +237,7 @@
           </ol>
           <div class="photo__frame">
             <img
-              src="image/image_big_uk2.webp"
+              src="image/image-v2_big_uk2.webp"
               width="550"
               height="413"
               loading="lazy"
@@ -251,8 +251,7 @@
               <li>– розмір у відкритому вигляді: 52х52см</li>
               <li>– нарди шашки шахи</li>
               <li>– дерев яні шахові фігури</li>
-              <li>– дерев яні фішки для нард</li>
-              <li>– пластикові фігури для шашок</li>
+              <li>– пластикові фігури для шашок та нард</li>
               <li>– 2 кубики для нард</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
