Added versions of file captions for resetting cache on the site

--- a/34x34sm.html
+++ b/34x34sm.html
@@ -26,7 +26,7 @@
     />
     <meta http-equiv="content-language" content="ru_RU" />
     <meta name="robots" content="index, follow" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css?v=2.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script type="application/ld+json">
@@ -654,7 +654,7 @@
       href="https://fonts.googleapis.com/css2?family=Caveat:wght@400&family=Rubik+Mono+One&display=swap"
       rel="stylesheet"
     />
-    <script src="script.js" defer></script>
+    <script src="script.js?v=2.0" defer></script>
     <!-- Analytics -->
     <script
       async
