--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/image-v2_mini_1_uk.webp"
+                src="image/image-v3_mini_1_uk.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -212,7 +212,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/image-v2_mini_2_uk.webp"
+                src="image/image-v3_mini_2_uk.webp"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -239,7 +239,7 @@
           <div class="photo__wrap">
             <div class="photo__frame">
               <img
-                src="image/image-v2_big_uk.webp"
+                src="image/image-v3_big_1_uk.webp"
                 width="550"
                 height="418"
                 loading="lazy"
