Changed titles, descriptions and other meta tags for SEO and best practices.

--- a/34x34sm.html
+++ b/34x34sm.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Шахматы Деревянные – Купить з Доставкой (+800 Заказов)</title>
+    <title>Шахматы «Деревянные» – Купить с Доставкой (1200+ Заказов)</title>
     <meta
       name="description"
-      content="Шахматы деревянные - (34x34, и другие) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Посмотрите фотографии и покупайте шахматы на подарок (800+ заказов)!"
+      content="Шахматы - (34x34, и другие)✔️ Быстрая доставка (1-2 дня), выгодная цена. Посмотрите фотографии и покупайте шахматы на подарок (1200+ заказов)!"
     />
     <meta
       name="keywords"
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Шахматы Купить" />
     <meta
       property="og:description"
-      content="Шахматы деревянные - (34x34, и другие) ✔️ Быстрая доставка (1-2 дня), выгодная цена. Посмотрите фотографии и покупайте шахматы на подарок (800+ заказов)!"
+      content="Шахматы - (34x34, и другие)✔️ Быстрая доставка (1-2 дня), выгодная цена. Посмотрите фотографии и покупайте шахматы на подарок (1200+ заказов)!"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахматы ТУТ" />
@@ -35,7 +35,7 @@
         "@type": "Product",
         "name": "Шахматы Купить",
         "image": "/image/shahmaty_ru.webp",
-        "description": "идеальная игра для тех кто хочет стратегически мыслить",
+        "description": "компактная форма, деревянные фигуры, все для больших стратегий на олимпийском уровне.",
         "brand": {
           "@type": "Thing",
           "name": "Shahmati"
