--- a/52x52sm.html
+++ b/52x52sm.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Шахи Дерев яні – Купити з Доставкою (800+ замовлень)</title>
+    <title>Шахи «Дерев яні» – Купити з Доставкою (1200+ Замовлень)</title>
 
     <meta
       name="description"
-      content="Купуйте Шахи Дерев яні – (52x52, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і купуйте шахмати на подарунок (800+ замовлень)"
+      content="Шахи – (52x52, та інші)✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і купуйте шахи на подарунок (1200+ Замовлень)"
     />
     <meta
       name="keywords"
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Шахи Купити" />
     <meta
       property="og:description"
-      content="Купуйте Шахи Дерев яні – (52x52, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і купуйте шахмати на подарунок (800+ замовлень)"
+      content="Шахи – (52x52, та інші)✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і купуйте шахи на подарунок (1200+ Замовлень)"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахи ТУТ" />
@@ -34,9 +34,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "Шахи Купити",
+        "name": "Шахи Дерев яні",
         "image": "/image/shahy_ua.webp",
-        "description": "ідеальна гра для тих хто хоче стратегічно мислити",
+        "description": "стандарт для гравців, розмір та деревʼяні фігури забезпечують комфорт та простір для стратегічних рухів.",
         "brand": {
           "@type": "Thing",
           "name": "Shahmati"
