--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Шахмати Дерев яні – Купити з Доставкою (800+ замовлень)</title>
+    <title>Шахмати «Дерев яні» – Купити з Доставкою (1200+ Замовлень)</title>
     <meta
       name="description"
-      content="Купуйте Шахмати Дерев яні – (30х30, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фотографії та купуйте шахмати на подарунок (800+ замовлень)!"
+      content="Шахмати – (30х30, та інші)✔️ Швидка доставка (1-2 дні), хороша ціна. Перегляньте фотографії та купуйте шахмати на подарунок (1200+ замовлень)!"
     />
     <meta
       name="keywords"
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Шахмати Купити" />
     <meta
       property="og:description"
-      content="Купуйте Шахмати Дерев яні – (30х30, та інші) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фотографії та купуйте шахмати на подарунок (800+ замовлень)!"
+      content="Шахмати – (30х30, та інші)✔️ Швидка доставка (1-2 дні), хороша ціна. Перегляньте фотографії та купуйте шахмати на подарунок (1200+ замовлень)!"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахмати ТУТ" />
@@ -33,9 +33,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "Шахмати купити",
+        "name": "Шахмати Дерев яні",
         "image": "/image/shahmaty_ua.webp",
-        "description": "ідеальна гра для тих хто хоче стратегічно мислити",
+        "description": "ідеально підходить для швидких і захопливих партій в компактному форматі.",
         "brand": {
           "@type": "Thing",
           "name": "Shahmati"
