Deleted quotes from price in html

--- a/34x34sm.html
+++ b/34x34sm.html
@@ -37,13 +37,13 @@
         "image": "/image/shahmaty_ru.webp",
         "description": "компактная форма, деревянные фигуры, все для больших стратегий на олимпийском уровне.",
         "brand": {
-          "@type": "Thing",
+          "@type": "Brand",
           "name": "Shahmati"
         },
         "offers": {
           "@type": "Offer",
           "priceCurrency": "UAH",
-          "price": "900",
+          "price": 900,
           "itemCondition": "https://schema.org/NewCondition",
           "availability": "https://schema.org/InStock",
           "seller": {
