--- a/52x52sm.html
+++ b/52x52sm.html
@@ -38,13 +38,13 @@
         "image": "/image/shahy_ua.webp",
         "description": "стандарт для гравців, розмір та деревʼяні фігури забезпечують комфорт та простір для стратегічних рухів.",
         "brand": {
-          "@type": "Thing",
+          "@type": "Brand",
           "name": "Shahmati"
         },
         "offers": {
           "@type": "Offer",
           "priceCurrency": "UAH",
-          "price": "1100",
+          "price": 1100,
           "itemCondition": "https://schema.org/NewCondition",
           "availability": "https://schema.org/InStock",
           "seller": {
