--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         "image": "/image/shahmaty_ua.webp",
         "description": "ідеально підходить для швидких і захопливих партій в компактному форматі.",
         "brand": {
-          "@type": "Thing",
+          "@type": "Brand",
           "name": "Shahmati"
         },
         "offers": {
           "@type": "Offer",
           "priceCurrency": "UAH",
-          "price": "800",
+          "price": 800,
           "itemCondition": "https://schema.org/NewCondition",
           "availability": "https://schema.org/InStock",
           "seller": {
