--- a/34x34sm.html
+++ b/34x34sm.html
@@ -263,7 +263,7 @@
               <li>- деревянные фишки</li>
               <li>- 2 кубика</li>
             </ul>
-            <button class="button__buy">КУПИТИ</button>
+            <button class="button__buy">КУПИТЬ</button>
           </div>
         </div>
       </section>
@@ -524,7 +524,7 @@
             class="outreach__item"
           >
             <img
-              src="image/monopolytut_com.webp"
+              src="https://monopolytut.com/image/outreach.webp"
               width="164"
               height="200"
               loading="lazy"
@@ -534,13 +534,55 @@
           </a>
           <a href="https://elkatut.com/" rel="dofollow" class="outreach__item">
             <img
-              src="image/elkatut_com.webp"
+              src="https://elkatut.com/image/elkatut_com.webp"
               width="140"
               height="200"
               loading="lazy"
               alt="искусственная елка"
             />
             <span class="outreach__name">ИСКУССТВЕННАЯ ЕЛКА</span>
+          </a>
+          <a
+            href="https://shezlongtut.com/"
+            rel="dofollow"
+            class="outreach__item"
+          >
+            <img
+              src="https://shezlongtut.com/image/outreach.webp"
+              width="228"
+              height="200"
+              loading="lazy"
+              alt="шезлонг пластиковый"
+            />
+            <span class="outreach__name">ШЕЗЛОНГ</span>
+          </a>
+          <a
+            href="https://mangaltut.com/"
+            rel="dofollow"
+            class="outreach__item"
+          >
+            <img
+              src="https://mangaltut.com/image/outreach.webp"
+              width="190"
+              height="200"
+              loading="lazy"
+              alt="мангал качественный"
+            />
+            <span class="outreach__name">МАНГАЛ</span>
+          </a>
+          <a
+            href="https://nardytut.com/ruchnoj-roboty/"
+            rel="dofollow"
+            class="outreach__item"
+          >
+            <img
+              src="https://nardytut.com/image/outreach.webp"
+              width="190"
+              height="200"
+              loading="lazy"
+              alt="нарды ручной работы"
+            />
+            <span class="outreach__name">НАРДЫ</span>
           </a>
         </div>
       </section>
