brand name corrected

--- a/34x34sm.html
+++ b/34x34sm.html
@@ -38,7 +38,7 @@
         "description": "компактная форма, деревянные фигуры, все для больших стратегий на олимпийском уровне.",
         "brand": {
           "@type": "Brand",
-          "name": "Shahmati"
+          "name": "Шахматы ТУТ"
         },
         "offers": {
           "@type": "Offer",
@@ -48,7 +48,7 @@
           "availability": "https://schema.org/InStock",
           "seller": {
             "@type": "Organization",
-            "name": "ШАХМАТЫ ТУТ"
+            "name": "Шахматы ТУТ"
           }
         }
       }
