--- a/52x52sm.html
+++ b/52x52sm.html
@@ -39,7 +39,7 @@
         "description": "стандарт для гравців, розмір та деревʼяні фігури забезпечують комфорт та простір для стратегічних рухів.",
         "brand": {
           "@type": "Brand",
-          "name": "Shahmati"
+          "name": "Шахи ТУТ"
         },
         "offers": {
           "@type": "Offer",
