--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         "description": "ідеально підходить для швидких і захопливих партій в компактному форматі.",
         "brand": {
           "@type": "Brand",
-          "name": "Shahmati"
+          "name": "Шахмати ТУТ"
         },
         "offers": {
           "@type": "Offer",
@@ -48,7 +48,7 @@
           "availability": "https://schema.org/InStock",
           "seller": {
             "@type": "Organization",
-            "name": "ШАХМАТИ ТУТ"
+            "name": "Шахмати ТУТ"
           }
         }
       }
